Can't snap with self vertex #120239

Closed
opened 2024-04-04 06:15:52 +02:00 by Emi Martinez · 6 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.86

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-03 19:37, hash: e0e6dc8550f1
Worked: 4.1

Caused by 1c77779160

Can't snap with self vertex
Many times it has happened to me in previous versions, now I finally managed to reproduce the error.

When opening the file, the selected faces can't snap with self vertex.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.86 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-03 19:37, hash: `e0e6dc8550f1` Worked: 4.1 Caused by 1c77779160 Can't snap with self vertex Many times it has happened to me in previous versions, now I finally managed to reproduce the error. When opening the file, the selected faces can't snap with self vertex.
Emi Martinez added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-04-04 06:15:52 +02:00
Member

Can confirm. This works in 4.1 stable, so recent regression.

Can confirm. This works in 4.1 stable, so recent regression.
YimingWu added
Module
Modeling
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2024-04-04 10:06:15 +02:00
Member

#120104 (comment)

Doesn't seem to be that related to this since this object doesn't have any modifiers.

The object does have that small inner ring sharing edge with 3 faces but that didn't affect the snapping. Remove doubled also didn't help

Bisecting

https://projects.blender.org/blender/blender/issues/120104#issuecomment-1158285 Doesn't seem to be that related to this since this object doesn't have any modifiers. The object does have that small inner ring sharing edge with 3 faces but that didn't affect the snapping. Remove doubled also didn't help Bisecting
Member

Caused by 1c77779160

CC @mano-wii

Caused by 1c77779160abe2f02481041790d06a46819887b9 CC @mano-wii
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-04-18 16:26:29 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-18 16:48:36 +02:00
Author

@ChengduLittleA @lichtwerk @mano-wii
Sorry, but why is this closed? This is not solve on the 4.2.0 Alpha, branch: main, commit date: 2024-04-18 21:44, hash: 05c1abe59c95

As seen in the video, it seems that the viewing angle influences vertex snapping. Depending on which side the geometry is being viewed from, it either works or doesn't.
I used the same file from post #1

@ChengduLittleA @lichtwerk @mano-wii Sorry, but why is this closed? This is not solve on the 4.2.0 Alpha, branch: main, commit date: 2024-04-18 21:44, hash: `05c1abe59c95` As seen in the video, it seems that the viewing angle influences vertex snapping. Depending on which side the geometry is being viewed from, it either works or doesn't. I used the same file from post #1
Blender Bot added
Status
Confirmed
and removed
Status
Resolved
labels 2024-04-19 04:43:11 +02:00

Thanks for testing.
The case now was Backface Culling
In edit mode it is not to affect edges and vertices.
Fixed by f5f05c99c9

Thanks for testing. The case now was Backface Culling In edit mode it is not to affect edges and vertices. Fixed by f5f05c99c9
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2024-04-19 14:50:55 +02:00
Hans Goudey added
Status
Resolved
and removed
Status
Archived
labels 2024-04-19 17:34:49 +02:00
Author

Can confirm it's working again! good work! thank you! 🙂

Can confirm it's working again! good work! thank you! 🙂
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120239
No description provided.